--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,9 @@ jobs:
           python-version: "3.9"
       - name: Install packages
         run: pip install -r requirements.txt
-      - name: Run tests
-        run: python manage.py test
+      - name: Run git bisect
+        run: |
+          badhash=$(git rev-parse HEAD)
+          goodhash= e4cfc6f77ebbe2e23550ddab682316ab4ce1c03c
+          git bisect start $badhash $goodhash
+          git bisect run python manage.py test
