--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Run git bisect
         run: |
           badhash=$(git rev-parse HEAD)
-          goodhash= e4cfc6f77ebbe2e23550ddab682316ab4ce1c03c
+          goodhash=e4cfc6f77ebbe2e23550ddab682316ab4ce1c03c
           git bisect start $badhash $goodhash
           git bisect run python manage.py test
