--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
           python-version: "3.9"
       - name: Install packages
         run: pip install -r requirements.txt
+      - name: Run tests
+        run: python3 manage.py test
       - name: Run git bisect
         run:
           badhash="c1a4be04b972b6c17db242fc37752ad517c29402"
