--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 name: Python package
 on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -7,16 +8,24 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
+
       - name: Install packages
         run: pip install -r requirements.txt
+
       - name: Run tests
-        run: python3 manage.py test
-      - name: Run git bisect
-        run:
+        id: test
+        run: |
+          python3 manage.py test
+        continue-on-error: true
+
+      - name: Run git bisect if tests fail
+        if: steps.test.outcome == 'failure'
+        run: |
           badhash="c1a4be04b972b6c17db242fc37752ad517c29402"
           goodhash="e4cfc6f77ebbe2e23550ddab682316ab4ce1c03c"
           python3 myscript.py
